Changed the background color of the site so 'white' wouldn't bleed through any longer (Issue #120)
Resolves #120

--- a/flask_site/static/main.css
+++ b/flask_site/static/main.css
@@ -7,6 +7,7 @@ body {
     font-family: "PT Sans Narrow", sans-serif;
     font-size: larger;
     color: wheat;
+    background-color: black;
 }
 
 a {
